src/test/deca/context/invalid/SansObjet/DeclVar-EQ-float-float-int.deca
// Description:
//    Declaration of a float variable using == operation between a float variable and int .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  10.01; 
    int y = 20; 
    float z = x == y ; 
}
